--- a/dbconfig.properties
+++ b/dbconfig.properties
@@ -1,3 +1,6 @@
-# To change this template, choose Tools | Templates
-# and open the template in the editor.
-
+#
+#Sun Jun 01 23:47:20 IST 2014
+user=root
+password=123
+host=localhost
+dbname=ps
